# metalchat

./: .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  LICENSE  Pipfile  README.md  conanfile.py  conanfile.txt  module.modulemap  taskfile.py
.github/workflows/: cxx_unit_tests.yaml  homebrew.yaml  homebrew_bottles.yaml  pre-commit.yaml  pre_commit.yaml
Formula/: metalchat.rb
docs/: conf.py  index.rst  requirements.txt
documentation/: Doxyfile  conf.py  index.rst  install.rst  requirements.txt
documentation/_static/: overrides.css
documentation/development/: building.rst  index.rst
documentation/guides/: command_line.rst  development.rst  getting_started.rst  index.rst  install.rst  memory_reduced.rst  tool_calling.rst
documentation/reference/: allocator.rst  chat.rst  container.rst  index.rst  kernel.rst  layer.rst  memory.rst  tensor.rst
documentation/reference/agent/: index.rst  tokens.rst
documentation/reference/interpreter/: index.rst  tokens.rst
documentation/reference/kernel/: index.rst  metal.rst
documentation/reference/layer/: index.rst  llm.rst  nn.rst  safetensor.rst
documentation/reference/tensor/: constructor.rst  create.rst  future.rst  index.rst  traits.rst
documentation/reference/text/: index.rst
include/: safetensor.h
include/metalama/: device.h  format.h  safetensor.h  stream.h  tensor.h  transformer.h
include/metalama/nn/: embedding.h  operation.h
include/metalchat/: accelerator.h  agent.h  allocator.h  autoloader.h  bpe.h  cache.h  chat.h  command.h  container.h  device.h  dtype.h  format.h  function.h  functional.h  huggingface.h  indexing.h  interpreter.h  iterator.h  kernel.h  kernel_task.h  kernel_thread.h  kernel_wrapper.h  layer.h  llama.h  metal.h  metalchat.h  module.modulemap  nn.h  operations.h  quantization.h  reference.h  repository.h  safetensor.h  tensor.h  tensor_concept.h  tensor_future.h  tensor_polymorphic.h  tensor_shared.h  text.h  transformer.h  (+1 more)
include/metalchat/functional/: embedding.h  mul.h  primitive.h  rmsnorm.h  sgemm.h  silu.h  softmax.h  sum.h  transform.h
include/metalchat/huggingface/: gemma.h  llama.h  text.h
include/metalchat/kernel/: activation.h  add.h  arithmetic.h  bmm.h  copy.h  cumsum.h  embedding.h  logical.h  mul.h  multinomial.h  rmsnorm.h  roll.h  sgemm.h  silu.h  softmax.h  sort.h  sum.h
include/metalchat/llama/: attention.h  feed_forward.h  mlp.h  model.h  transformer.h
include/metalchat/nn/: attention.h  cache.h  embedding.h  gemma.h  layer.h  layer_array.h  linear.h  llama.h  llama_options.h  norm.h  normalization.h  operation.h  options.h  rmsnorm.h  sampling.h  sgemm.h  transformer.h
include/metalchat/quantization/: algorithm.h  linear.h  lora.h  qlora.h
include/metalchat/tensor/: accessor.h  basic.h  concept.h  expected.h  format.h  future.h  indexing.h  iterator.h  polymorphic.h  shared.h  traits.h
include/metalchat/text/: assistant.h  bpe.h  gpt.h  regexp.h  sentence_piece.h  tokenizer.h  tool.h  unicode_tokenizer.h
kernel/: CMakeLists.txt  activation.metal  add.metal  arithmetic.metal  bmm.metal  copy.metal  cumsum.metal  embedding.metal  kernel.h  logical.metal  metalama.metal  metalchat.metal  mul.metal  multinomial.metal  rmsnorm.metal  roll.metal  rope.metal  sgemm.metal  silu.metal  softmax.metal  sort.metal  sum.metal  tensor.h
program/: chat.cc  chat.h  command.cc  command.h  config.cc  config.h  credential.cc  credential.h  digest.h  filesystem.h  hash.h  http.cc  http.h  iterator.h  main.cc  manifest.cc  manifest.h  model.cc  model.h  options.cc  options.h  program.cc  program.h  remote.cc  remote.h
src/: accelerator.cc  agent.cc  allocator.cc  assistant.cc  autoloader.cc  bpe.cc  chat.cc  command.cc  container.cc  gemma.cc  gpt.cc  huggingface.cc  huggingface.h  interpreter.cc  kernel.cc  kernel_thread.cc  layer.cc  llama.cc  main.cc  metal.cc  metal_impl.h  reference.cc  regexp.cc  safetensor.cc  tensor.cc  transformer.cc
test/: CMakeLists.txt  test_accelerator.cc  test_agent.cc  test_allocator.cc  test_assistant.cc  test_autoloader.cc  test_bpe.cc  test_chat.cc  test_command.cc  test_concatenate.cc  test_function_softmax.cc  test_functional.cc  test_gemma.cc  test_huggingface.cc  test_indexing.cc  test_interpreter.cc  test_iterator.cc  test_kernel_activation.cc  test_kernel_add.cc  test_kernel_arithmetic.cc  test_kernel_bmm.cc  test_kernel_copy.cc  test_kernel_cumsum.cc  test_kernel_embedding.cc  test_kernel_logical.cc  test_kernel_mul.cc  test_kernel_multinomial.cc  test_kernel_rmsnorm.cc  test_kernel_roll.cc  test_kernel_sgemm.cc  test_kernel_silu.cc  test_kernel_softmax.cc  test_kernel_sort.cc  test_kernel_sum.cc  test_kernel_thread.cc  test_layer.cc  test_llama.cc  test_quantization.cc  test_reference.cc  test_safetensor.cc  (+4 more)
test/metalchat/: testing.h
test_package/: CMakeLists.txt  conanfile.py  main.cc
